--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/core": "^0.5.2",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/rest": "^1.7.0",
+    "@discordjs/voice": "^0.16.0",
+    "@discordjs/ws": "^0.8.1",
     "discord-player": "^5.3.2",
-    "discord.js": "^14.5.0",
-    "nodemon": "^2.0.20"
+    "discord.js": "^14.9.0",
+    "nodemon": "^2.0.20",
+    "play-dl": "^1.9.6",
+    "soundcloud-scraper": "^5.0.3",
+    "spotify-url-info": "^3.2.3",
+    "youtube-sr": "^4.3.4",
+    "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
     "eslint": "^8.24.0"
