fix: remove ytdl-core dependency - security risk

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "soundcloud-scraper": "^5.0.3",
     "spotify-url-info": "^3.2.3",
     "ts-node": "^10.9.1",
-    "youtube-sr": "^4.3.4",
-    "ytdl-core": "^4.11.4"
+    "youtube-sr": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^18.15.13",
