--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@discordjs/ws": "^0.8.1",
     "discord-player": "^5.3.2",
     "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "play-dl": "^1.9.6",
     "soundcloud-scraper": "^5.0.3",
